Deduplicate iPTMnet nodes and add involved enzymes