@@ -6,7 +6,7 @@ import org.apache.hadoop.conf.Configuration;
 public final class ReflectionUtils {
     public static Object newInstance(Class<?> type, Configuration x) {
         try {
-            Object o = type.newInstance();
+            Object o = type.getDeclaredConstructor().newInstance();
             if (o instanceof Configurable) {
                 ((Configurable) o).setConf(x);
             }
